...
                            }
                        }
                    } catch (e: Exception) {
                        Toast.makeText(context, e.message.toString(), Toast.LENGTH_SHORT).show()
                    }
                },
                cardClickTestTag = "FirstMediaItem",
                downloadClickTextTag ="FirstMediaItemDownload",
                context = context
            )
            VerticalSpace(height = 20)

            DownloadItemComponent(
...
