...
                        .padding(horizontal = 10.dp)
                        .fillMaxWidth(),
                    verticalAlignment = Alignment.CenterVertically,

                    ) {
                    TextButton(
                        modifier = Modifier.testTag("DownloadButton"),
                        onClick = {
                            try {
                                if (DownloadUtil
                                        .getDownloadTracker(context)
                                        .isDownloaded(mediaItem)
                                ) {
...
